<resources>
    <string name="app_name">QU Tracker</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="home">Home</string>
    <string name="info">Info</string>
    <string name="favs">Favs</string>
    <string name="help">Help</string>
    <string name="API">AIzaSyAb1qAIWdXfQCJte2oPiieFtqWfVZiv9PY</string>
    <string name="FillerNumbers">##</string>
    <string name="my_buildings">My Buildings</string>
    <string name="my_residence_halls">My Residence Halls</string>
    <string name="my_dining_halls">My Dining Halls</string>
    <string name="academic_buildings_title">Academic Buildings</string>
    <string name="dining_buildings_title">Dining Halls</string>
    <string name="residence_buildings_title">Residence Halls</string>
    <string name="academic_favs_title">Academic Building Favorites</string>
    <string name="dining_favs_title">Dining Hall Favorites</string>
    <string name="residence_favs_title">Residence Hall Favorites</string>
    <string name="favorite_academic_buildings">ACADEMIC BUILDING FAVORITES</string>
    <string name="todo">TODO</string>
    <string name="favs_fragment">Favs Fragment</string>
    <string name="help_fragment">Help Fragment</string>
    <string name="quinnipiac_tracker">Quinnipiac Tracker</string>
    <string name="cas_fragment">CAS Fragment</string>
    <string name="_6">6</string>
    <string name="cce_fragment">CCE Fragment</string>
    <string name="echlin_fragment">Echlin Fragment</string>
    <string name="lender_fragment">Lender Fragment</string>
    <string name="library_fragment">Library Fragment</string>
    <string name="tator_fragment">Tator Fragment</string>
    <string name="back">Back</string>
    <string name="cas_description">The College of Arts and Sciences building is the main hub for all things Arts. It is the main building used for Game Design students, one of the most rapidly-growing majors here at Quinnipiac. It hosts many things like general classrooms, the advising commons for students in the College of Arts and Sciences, and a state-of-the-art computer lab in the basement, which is the main room for all Game Design classes. This lab has multiple computers which can run high-quality programs like Unity, Z-Brush, Adobe Photoshop, and more.</string>
    <string name="cce_description">The Communications, Computing and Engineering building, otherwise known as CCE, is the hub for all Computer Science, Engineering, and Communications students. It holds the main Auditorium room, CCE101, which is used for a variety of different events, like seminars, celebrations, and training for RA’s. This building has 3 levels. The main level is used for film and media students, which is home to the communications students. The bottom floor has a host of the reservable study rooms, engineering classrooms, and computer labs. The top floor has standard-style classrooms used for all students.</string>
    <string name="cce_fun_fact">Fun Fact: CCE was originally planned to be a library for Law Students, but was eventually renovated to be made with classrooms for all students.</string>
    <string name="echlin_description">This building is the main building used for visitors who are interested in coming to Quinnipiac, as well as the main office for the Undergraduate Admissions and financial aid. This building is also home to many classes, especially for Nursing students, as well as other general classes.</string>
    <string name="lender_description">The Lender School of Business is the go-to building for all Business, Finance, and Economics majors. It is home to many collaborative classrooms, reservable study rooms, and the Financial Technology Center. This room has multiple Bloomberg Terminals, a student-led portfolio, and multiple connecting study rooms, with multiple stock market tickers.</string>
    <string name="tator_description">This building, connected to the Carl Hansen Student Center, which serves as a hub for all types of classes with many labs, general classrooms, and offices for faculty members.</string>
    <string name="library_description">The Arnold Bernhard Library is Quinnipiac’s most iconic building on campus. Its infamous clock tower skies over the whole quad, and is the main centerpiece for graduations. This two-story building has multiple open spaces for studying for all students. It also has multiple reservable study rooms for more collaborative, or more silent, work. It is also home to the Registrar, Bursar, Learning Commons, Student Administrative Services, Information Services, and the Technology Center. It is mainly open from 8am-12am, but during midterms and finals week, the library stays open as late as 2am.</string>
    <string name="add_building">Add Academic Building</string>
    <string name="add_dining">Add Dining Hall</string>
    <string name="add_residence">Add Residence Hall</string>
    <string name="enter_the_title">Enter the title</string>
    <string name="enter_the_description">Enter the description</string>
    <string name="save">Save</string>
    <string name="enter_a_building_name">Enter a building name</string>
    <string name="app_information">App Information</string>
    <string name="app_credits">App Credits</string>
    <string name="qu_resources_label">Important Campus Resources</string>
    <string name="cancel">Cancel</string>
    <string name="delete_note">Delete Note</string>
    <string name="building_title">Building Title</string>
    <string name="reset_map">Reset Map Position</string>
    <string name="enter_a_dining_name">Enter a dining hall name</string>
    <string name="enter_a_residence_name">Enter a residence hall name</string>
    <string name="location_logo">Location</string>
    <string name="no_location_added_yet">No location added yet</string>
    <string name="_2">2</string>
    <string name="_11">11</string>
    <string name="style">Style</string>
    <string name="suite">Suite</string>
    <string name="old_village_400_530_new_village_540_670">Old Village (400–530), New Village (540–670)</string>
    <string name="village_type">Village Type</string>
    <string name="old_village_400_530">Old Village (400–530)</string>
    <string name="new_village_540_670">New Village (540–670)</string>
    <string name="residents_per_room">Residents Per Room</string>
    <string name="_2_3_doubles">2 (3 Doubles)</string>
    <string name="old_village_bedrooms">Old Village Bedrooms</string>
    <string name="_12_x_12_5_quot_rooms_1_and_2">12\' x 12\'5\" (Rooms 1 and 2)</string>
    <string name="_12_5_quot_x_14_rooms_1_and_2">12\'5\" x 14\' (Rooms 1 and 2)</string>
    <string name="_15_8_quot_room_3">15\'8\" (Room 3)</string>
    <string name="_15_x_12_room_3">15\' x 12\' (Room 3)</string>
    <string name="new_village_bedrooms">New Village Bedrooms</string>
    <string name="yes">Yes</string>
    <string name="ac_yes_no">AC (Yes/No)</string>
    <string name="_2_4_doubles">2 (4 Doubles)</string>
    <string name="_11_5_quot_x_13_8_quot">11\'5\" x 13\'8\"</string>
    <string name="bedroom_dimensions">Bedroom Dimensions</string>
    <string name="_17_10_quot_x_10_2_quot">17\'10\" x 10\'2\"</string>
    <string name="no">No</string>
    <string name="_18_2_quot_x_17_10_quot">18\'2\" x 17\'10\"</string>
    <string name="_2_1_double">2 (1 Double)</string>
    <string name="_17_x_12">17\' x 12\'</string>
    <string name="traditional">Traditional</string>
    <string name="yes_no_in_common_rooms">Yes/No (In Common Rooms)</string>
    <string name="_2_1_quad">2 (1 Quad)</string>
    <string name="apartment">Apartment</string>
    <string name="_15_10_quot_x_11_4_quot">15\'10\" x 11\'4\"</string>
    <string name="_1_2_2_singles_1_double">1/2 (2 Singles, 1 Double)</string>
    <string name="_0">0</string>
    <string name="creator_label">Creators: Cole Davignon (left) and Brooks Jackson (right)</string>
    <string name="qu_resources">Important Phone Numbers\nPublic Safety: (203) 582-6200
\nStudent Health Services: (203) 407-4050
\nCounseling Center: (203) 407-4020
\nOne Stop: (203) 582-8650
\nLearning Commons: (203) 582-8628
\nStudent Affairs: (203) 582-8753
\nResidential Life: (203) 582-8666
\nCentral Duty Mt. Carmel: (203) 582-8622
</string>
    <string name="creator_descriptions">Cole and Brooks are both Bachelor’s of Computer Science majors, while being in the 3+1 Cybersecurity Master’s program. They both have interests in Game Design, in which they both have classes together in the Game Design program.</string>
    <string name="app_description">Our plan with this project is to make the QU experience more interactive and helpful.​ Our main goal of this project was to help incoming students understand our campus more​, since there can be some confusing parts. It is hard to soak it all in. We believed that if we had this app as incoming Bobcats, it would have answered so many questions for us, especially in the housing selection time period. Sometimes, we felt as if the upperclassmen dorms were foreign and we did not know which was which. We also believed this app could be helpful for international students interested, but cannot travel far. We believe that this app can change the way we see our campus, even without coming for a tour. We hoped to further expand this in the future, maybe adding York Hill information as well​! The Quinnipiac Tracker App can help so many people; incoming students, current students, staff, faculty, and even parents!</string>
    <string name="commons_description">One of the many First-Year housing options. It is home to quad-style dorms, with community bathrooms in each wing. It hosts many lobbies with large laundry rooms, and a common kitchen area. Each dorm holds 4 students with lofted beds, a desk, a closet, and carpeted floors. This building is very infamous for the long wooden bridge that all students walk on, as it is in one of the prettiest parts of campus. Commons is very heavily used for traffic control to and from the CAS building.</string>
    <string name="complex_description">This string of dorms are 3 buildings that make up The Complex. These buildings being Sahlin, Bakke, and Founders, are exact copies of each other. These recently renovated Sophomore dorms have a very modern and unique feel. It has its own kitchen, with its own fridge, stove, oven, and even a kitchen island! This apartment holds 4 students, containing 2 single dorms and a double. The room is provided with furniture for both the common space and the kitchen island seating.</string>
    <string name="dana_description">This is one of the main buildings for First-Years. The most classic dorm style; holds 2 residents, with community bathrooms on each floor, separated by gender. Its counterpart, Irma, has the same layout, style, and dorm spaces.</string>
    <string name="hill_description">One of the most popular choices of the Sophomore dorms. These dorms have the most perks; AC, kitchen, fridge, common room provided with some furniture, a bathroom, and even a balcony, which overlooks the whole Bobcat Way. These dorms hold 3 doubles with the 7 buildings being separated by 10’s-30’s and then 40’s to 70’s.</string>
    <string name="irma_description">This is one of the main buildings for First-Years. The most classic dorm style; holds 2 residents, with community bathrooms on each floor, separated by gender. Its counterpart, Dana, has the same layout, style, and dorm spaces.</string>
</resources>