<?xml version="1.0" encoding="utf-8"?>
<!--This file creates the bottom navigation menu.-->
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <!--Home Button-->
    <item
        android:id="@+id/homeFragment"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/home" />
    <!--Info Button-->
    <item
        android:id="@+id/infoFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_baseline_info_24"
        android:title="@string/info" />
    <!--Favs Button-->
    <item
        android:id="@+id/favsFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favs" />
    <!--Help Button-->
    <item
        android:id="@+id/helpFragment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:icon="@drawable/ic_baseline_question_24"
        android:title="@string/help" />
</menu>