<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context=".FavsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/back_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/QUblue" />

    </LinearLayout>

    <ImageView
        android:id="@+id/cce_image"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:scaleType="centerCrop"
        android:src="@drawable/cce"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/cce_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/box_outline"
        android:padding="16dp"
        android:text="@string/cce_description"
        android:textColor="@color/QUnavy"
        android:textSize="16sp" />
    <TextView
        android:id="@+id/cce_fun_fact"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp"
        android:background="@drawable/box_outline"
        android:padding="16dp"
        android:text="@string/cce_fun_fact"
        android:textColor="@color/QUnavy"
        android:textSize="16sp" />

</LinearLayout>