<?xml version="1.0" encoding="utf-8"?>
<!--This file is the layout for the add academic building screen-->
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context=".BuildingAddFragment"
        android:padding="12dp">

        <TextView
            android:id="@+id/addBuildingHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="16dp"
            android:text="@string/add_building"
            android:textColor="@color/QUblue"
            android:textSize="24sp"
            android:textStyle="bold" />

        <!--Hint for the user on what to input in the text box-->
        <AutoCompleteTextView
            android:id="@+id/addBuildingTitle"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/enter_a_building_name"
            android:padding="12dp"
            android:textSize="20sp"
            android:layout_below="@id/addBuildingHeader"
            android:background="@drawable/blue_border"
            android:layout_marginTop="16dp"
            android:maxLines="1" />

        <!--Save Button-->
        <TextView
            android:id="@+id/saveBuildingName"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="12dp"
            android:textSize="20sp"
            android:text="@string/save"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_below="@id/addBuildingTitle"
            android:background="@drawable/blue_border"
            android:backgroundTint="@color/QUblue"
            android:layout_marginTop="16dp"
            android:maxLines="1" />

        <!--Cancel Button-->
        <TextView
            android:id="@+id/cancelBuilding"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:padding="12dp"
            android:textSize="20sp"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:gravity="center"
            android:layout_below="@id/saveBuildingName"
            android:background="@drawable/blue_border"
            android:backgroundTint="@color/QUblue"
            android:layout_marginTop="16dp"
            android:maxLines="1" />

    </RelativeLayout>
</layout>