<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".buildings.residence.PerlFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <ImageButton
            android:id="@+id/back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="12dp"
            android:background="?attr/selectableItemBackground"
            android:contentDescription="@string/back"
            android:src="@drawable/ic_baseline_back_24"
            app:tint="@color/QUblue"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/favorite_button"
            style="?attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="0dp"
            android:layout_marginEnd="-8dp"
            android:src="@drawable/baseline_favorite_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:tint="@color/QUblue"
            tools:ignore="ContentDescription" />

        <ImageView
            android:id="@+id/perl_image"
            android:layout_width="0dp"
            android:layout_height="300dp"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:contentDescription="@string/todo"
            android:scaleType="centerCrop"
            android:src="@drawable/perl"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/back_button" />

        <TextView
            android:id="@+id/perl_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:background="@drawable/box_outline"
            android:padding="16dp"
            android:text="@string/todo"
            android:textColor="@color/QUnavy"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/perl_image" />

        <LinearLayout
            android:id="@+id/style_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_outline"
            android:orientation="horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/perl_description">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/style"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/style_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/suite"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/suites_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_outline"
            android:orientation="horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/style_group">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/residents_per_room"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/suites_layout_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/_2_4_doubles"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/bedroom_dimensions_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_outline"
            android:orientation="vertical"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp" android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/suites_layout">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/bedroom_dimensions"
                    android:textSize="16sp"
                    android:textColor="@color/QUnavy"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/suites_dimensions_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_11_5_quot_x_13_8_quot"
                    android:textSize="16sp"
                    android:textColor="@color/QUnavy"
                    android:textStyle="bold"/>

            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/ac_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/box_outline"
            android:orientation="horizontal"
            android:layout_marginStart="4dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="4dp"
            android:padding="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bedroom_dimensions_group">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ac_yes_no"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/ac_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="16sp"
                android:textColor="@color/QUnavy"
                android:textStyle="bold"/>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>