<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".fragments.help.AppCreditsFragment">

    <ImageButton
        android:id="@+id/back_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/back"
        android:src="@drawable/ic_baseline_back_24"
        app:tint="@color/QUblue"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:layout_width="400dp"
        android:layout_height="200dp"
        android:padding="8dp"
        android:layout_marginBottom="-8dp"
        android:layout_gravity="center"
        android:src="@drawable/cole_and_brooks"
        tools:ignore="ContentDescription"/>

    <LinearLayout
        android:id="@+id/app_credits_names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_outline"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_margin="4dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creator_label"
            android:textColor="@color/QUnavy"
            android:textSize="16sp"
            android:textStyle="bold"/>
    </LinearLayout>
    <LinearLayout
        android:id="@+id/app_credits_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/box_outline"
        android:orientation="horizontal"
        android:padding="16dp"
        android:layout_margin="4dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/creator_descriptions"
            android:textColor="@color/QUnavy"
            android:textSize="16sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>